# Collapse.rs

./: .gitignore  Cargo.toml  Note.md  Readme.md
src/: cli.rs  image.rs  main.rs  palette.rs
