[package]
name = "collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
opt-level = 3

[dependencies]
anyhow = "1.0.69"
bitvec = "1.0.1"
clap = { version = "4.1.6", features = ["derive"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"
pix = "0.13.2"
png = "0.17.7"
png_pong = "0.8.2"
progress = "0.2.0"
rand = "0.8.5"
rand-wyrand = "0.1.0"
rayon = "1.6.1"
